prevent double tap zooming on mobile device

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -120,6 +120,7 @@ body {
   font-weight: 100;
   width: 100%;
   user-select: none;
+  flex: auto;
 }
 
 .operand_row {
